Closed Bug 549056 Opened 16 years ago Closed 16 years ago

static flicker effect when playing back a flash video

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: blizzard, Assigned: bas.schouten)

References

(Depends on 1 open bug, )

Details

Attachments

(1 file)

When playing the url in the bug there's a bad flicker from time to time. Looks like a frame is occasionally being replaced with static and/or random memory. Takes a while, but it's there for sure. (Wait for the guy to start talking.) Hardware is an Mobile Intel(R) 4 Series Express Chipset Family (I think it's GMA X4500ish.)
Note that this is related to the D2D support. If you unset gfx.font_rendering.directwrite.enabled and restart the problem goes away.
Blocks: 527707
(In reply to comment #1) > Note that this is related to the D2D support. If you unset > gfx.font_rendering.directwrite.enabled and restart the problem goes away. Did you also have mozilla.widget.render-mode set to 6? (Disabling directwrite will force D2D off as well, just verifying D2D was actually on)
Confirmed, Windows 7 NVIDIA GeForce 7150M / nForce 630M Drivers: 7.15.11.7967
nVidia 8800GT/v. 195 drivers. Direct2D is definitely enabled. Just a guess but I think it happens when the size the video/flash displayed at is less than its native resolution. I notice this with YouTube videos too when they're embedded in a Facebook news feed, but the same video embedded on the actual YouTube page is okay.
After Farmville started crashing with IPC enabled I disabled IPC and the issue seems to have gone away.
When was the crash, and did you get crash report IDs from about:config and file it?
@Bas - Sorry, I mis-typed. (Those keys are right next to each other!) When I turn off mozilla.widget.render-mode I don't get flicker. When I set it to 6, I get flicker. The directwrite pref is set to use the new font rendering code in both cases. Don't know if this is a factor.
This could have to do with the double drawing thing we do with IPC when D2D is enabled. If it's windowless that is.
@Ben Hmm, hopefully this is the relevant one: http://crash-stats.mozilla.com/report/index/89afb9ed-6ca3-46b5-8662-2ce9f2100301 I've had other crashes, but the crash reporter didn't pop up so I couldn't submit.
(In reply to comment #9) > @Ben > > Hmm, hopefully this is the relevant one: > http://crash-stats.mozilla.com/report/index/89afb9ed-6ca3-46b5-8662-2ce9f2100301 > > I've had other crashes, but the crash reporter didn't pop up so I couldn't > submit. This is a really odd one, I doubt it's relevant, although I'd like to know what caused it.
IIRC, I was either trying to close the tab running Farmville or go to another site. The entire UI became really slow. Usually I just kill the mozilla-runtime process when that happens, but decided to wait out of curiosity. Eventually it just crashed.
This is because gfxWindowsNativeDrawing::IsDoublePass is currently broken. It is fixed in the patch from bug 548072.
Depends on: 548072
Would poor performance of a flash game also be a side effect of this? Playing the Ponzi game on Facebook causes the mozilla-runtime.exe to use an entire CPU core by itself, but when i turn off D2D/DW, it doesn't happen. ATI 5870, Catalyst 10.2 drivers (latest whql), Win 7 Pro x64, Core i7-920 (overclocked to 4ghz), 6GB DDR3 and Flash 10.1 Beta 3.
We should address this now in a separate patch. This patch should fix it.
Assignee: nobody → bas.schouten
Status: NEW → ASSIGNED
Attachment #432051 - Flags: review?(jmuizelaar)
Comment on attachment 432051 [details] [diff] [review] Fix IsDoublePass logic I suppose this is good. Take out the comment about it being 'the same test we use in BeginNativeDrawing'. That comment was never true...
Attachment #432051 - Flags: review?(jmuizelaar) → review+
Attachment #432051 - Flags: review?(jmathies)
Attachment #432051 - Flags: review?(jmathies) → review+
On this push, we got a couple of test failures that I don't recall seeing before: http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1268392175.1268393768.4970.gz WINNT 5.2 mozilla-central debug test mochitests-5/5 on 2010/03/12 03:09:35 s: win32-slave07 253 ERROR TEST-UNEXPECTED-FAIL | /tests/modules/plugin/test/test_painting.html | partially clipped plugin painted once - got 2, expected 1 254 ERROR TEST-UNEXPECTED-FAIL | /tests/modules/plugin/test/test_painting.html | painted after invalidate - got 4, expected 2 Is it possible this has caused those failures? Possibly related to how painting happens within the test framework?
Fixed the bustage too.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Verified fixed using hourly build Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100312 Minefield/3.7a3pre ID:20100312053645
Status: RESOLVED → VERIFIED
I'm not sure if this should be a separate bug or not, but since landing, the Wind Indicator on Weatherbug has been broken. My guess is something to do with transparency in the flash. An example is: http://weather.weatherbug.com/NY/New%20York-weather.html?nav_section=1&zcode=z6286
(In reply to comment #24) > I'm not sure if this should be a separate bug or not, but since landing, the > Wind Indicator on Weatherbug has been broken. My guess is something to do with > transparency in the flash. An example is: > http://weather.weatherbug.com/NY/New%20York-weather.html?nav_section=1&zcode=z6286 WFM, unless you are referring to the black background since I do see in other places on different pages. You should file a separate bug.
(In reply to comment #25) > (In reply to comment #24) > > I'm not sure if this should be a separate bug or not, but since landing, the > > Wind Indicator on Weatherbug has been broken. My guess is something to do with > > transparency in the flash. An example is: > > http://weather.weatherbug.com/NY/New%20York-weather.html?nav_section=1&zcode=z6286 > > WFM, unless you are referring to the black background since I do see in other > places on different pages. You should file a separate bug. Sorry to spam this resolved bug. I have d2d disabled at the moment so this is a Core:plugins bug.
Depends on: 552052
I think this might be back. At least it looks like what I was seeing on the Facebook flash games back before this was marked fixed. http://imgur.com/7H2gU.png
(In reply to comment #28) > I think this might be back. At least it looks like what I was seeing on the > Facebook flash games back before this was marked fixed. > > http://imgur.com/7H2gU.png Hrm, I didn't touch any of the code...
Does it maybe have something to do with Flash 10.1 Beta 3 already using the GPU for acceleration and then Minefield is doing something else on top of that? I have not notice this issue anywhere else, just in Flash games on Facebook, but only with Minefield and D2D/DW enabled. IE8, Chrome, Firefox 3.6, all with Flash 10.1 Beta 3 are all normal and the animations are fine.
I am running Flash 10.1 Beta 3. I only really play one Flash game on FB and it's Farmville. I haven't noticed the "static flicker" issue in that game since this was marked as "fixed" or on any other site for that matter. I tried playing that Ponzi game too and I haven't seen the issue there too, but I can verify it does run extremely slowly with OOPP and D2D enabled. Slowness is reproducible in Farmville too. Do you see the issue at ustream.tv/SFShiba ? Before this was fixed it occurred there for me.
No, I do not see the issue @ ustream or youtube or any other flash video site.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: