Bug 549056: We always do double pass drawing when we're not a Win32 surface. r=jmathies,jrmuizel